install php mailer and mail setup

--- a/.env
+++ b/.env
@@ -10,3 +10,14 @@ DB_HOST=localhost
 DB_NAME=ecommerce
 DB_USER=root
 DB_PASS=
+
+
+#Mail Credential
+
+MAIL_DRIVER=smtp
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+EMAIL_USERNAME=test@gmail.com
+EMAIL_PASSWORD=test123
+MAIL_ENCRYPTION=tls
+ADMIN_EMAIL=support@coder.org
