--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "vlucas/phpdotenv": "^5.3",
         "altorouter/altorouter": "^2.0",
         "philo/laravel-blade": "^3.1",
-        "illuminate/database": "5.8.36"
+        "illuminate/database": "5.8.36",
+        "phpmailer/phpmailer": "^6.5"
     }
 }
