--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "altorouter/altorouter": "^2.0",
         "philo/laravel-blade": "^3.1",
         "illuminate/database": "5.8.36",
-        "phpmailer/phpmailer": "^6.5"
+        "phpmailer/phpmailer": "^6.5",
+        "filp/whoops": "^2.14"
     }
 }
