create category model and show category list

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "philo/laravel-blade": "^3.1",
         "illuminate/database": "5.8.36",
         "phpmailer/phpmailer": "^6.5",
-        "filp/whoops": "^2.14"
+        "filp/whoops": "^2.14",
+        "nesbot/carbon": "^2.51"
     }
 }
