--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "illuminate/database": "5.8.36",
         "phpmailer/phpmailer": "^6.5",
         "filp/whoops": "^2.14",
-        "nesbot/carbon": "^2.51"
+        "nesbot/carbon": "^2.51",
+        "voku/pagination": "^4.0"
     }
 }
